# rust_tutorial

./: Cargo.toml
advanced_functions/: Cargo.toml
advanced_functions/src/: main.rs
advanced_trait/: Cargo.toml
advanced_trait/src/: main.rs
collections/: Cargo.toml
collections/src/: hashmap.rs  main.rs  strings.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs  message_passing.rs  shared_state.rs
enums/: Cargo.toml
enums/src/: if_let.rs  main.rs  matches.rs
errors/: Cargo.toml
errors/src/: main.rs
function/: Cargo.toml
function/src/: main.rs
functional_features/: Cargo.toml
functional_features/src/: improve_io.rs  iterators.rs  main.rs
generics/: Cargo.toml
generics/src/: lifetime.rs  main.rs  traits.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
oop/: Cargo.toml
oop/src/: main.rs  oo_design_patterns.rs  trait_object.rs
ownership/: Cargo.toml
ownership/src/: main.rs
pattern_match/: Cargo.toml
pattern_match/src/: main.rs  pattern.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs  main.rs
smart_pointer/: Cargo.toml
smart_pointer/src/: box_.rs  drop_.rs  interior_mutability.rs  main.rs  rc_.rs  reference_cycle.rs
structs/: Cargo.toml
structs/src/: main.rs  sample.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_organization.rs
tests/tests/: integration_test.rs
unsafe_rust/: Cargo.toml
unsafe_rust/src/: main.rs
variable/: Cargo.toml
variable/src/: main.rs
