[package]
name = "rust_tutorial"
version = "0.1.0"
authors = ["kotamat <kota1861@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]

members = [
    "guessing_game",
    "variable",
    "function",
    "ownership",
    "structs",
    "enums",
    "restaurant",
    "collections",
    "errors",
    "generics",
    "tests",
    "functional_features",
    "smart_pointer",
    "concurrency",
    "oop",
    "pattern_match",
    "unsafe_rust",
    "advanced_trait",
    "advanced_functions",
    "macros",
]